# codio

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.datalad/: config
.github/workflows/: docs.yml
.projio/: config.yml  packages.yml
docs/: implementation-plan.md  index.md
docs/explanation/: code-intelligence.md  cross-project-sharing.md  discovery-first.md  ecosystem-links.md  index.md  library-kinds.md  registry-model.md  vision.md
docs/how-to/: discover.md  index.md  init.md  json-output.md  maintain.md  study.md
docs/log/idea/: index.md
docs/log/task/: index.md  task-arash-20260318-025445-700131.md
docs/prompts/: maintenance.md  projio-flow-scaffold-handoff.md
docs/prompts/m7/: 01-current-state-analysis.md  02-codio-vision-and-goals.md  03-codio-entity-model.md  04-library-workspace-specification.md  05-ingestion-workflow.md  06-code-intelligence-indexing-design.md  07-cross-project-sharing.md  08-design-review.md  README.md  indexio-code-backends.md
docs/reference/: cli.md  configuration.md  entity-model.md  index.md  ingestion.md  library-layout.md  workspace.md
docs/specs/codio/: codio-agent-skills.md  codio-architecture.md  codio-concepts.md  codio-current-state.md  codio-design-review.md  codio-goals.md  codio-mcp-tools.md  codio-overview.md  (+3 more)
docs/tutorials/: index.md  quickstart.md
example/: mkdocs.yml
example/.codio/: repos.yml
example/.projio/: config.yml
site/: 404.html  index.html
site/explanation/: index.html
site/how-to/: index.html
site/implementation-plan/: index.html
site/reference/: index.html
site/search/: search_index.json
site/tutorials/: index.html
src/codio/: __init__.py  cli.py  config.py  mcp.py  models.py  paths.py  rag.py  registry.py  scaffold.py  vocab.py
src/codio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cli.py  test_codio.py  test_m7_features.py  test_mcp.py  test_models.py  test_rag.py  test_registry.py  test_skills.py  test_vocab.py
(+33 files in other folders)
