[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "" }]
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0", "pydantic>=2.0"]

[project.scripts]
codio = "codio.cli:main"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codio = ["templates/**/*.tmpl"]
