[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codio-tools"
version = "0.1.1"
description = "Code intelligence and reuse discovery for research repositories"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arash Shahidi", email = "A.Shahidi@campus.lmu.de" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["code", "reuse", "discovery", "library", "registry", "intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/arashshahidi1997/codio"
Documentation = "https://arashshahidi1997.github.io/codio/"
Repository = "https://github.com/arashshahidi1997/codio"
Issues = "https://github.com/arashshahidi1997/codio/issues"

[project.scripts]
codio = "codio.cli:main"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codio = ["templates/**/*.tmpl"]
